# crescent

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
core/: .gitignore  Cargo.toml
core/src/: lib.rs
core/src/db/: migrator.rs
core/src/routes/: goals.rs  hello.rs  mod.rs  notes.rs
core/src/utils/: errors.rs  get_app_dir.rs  mod.rs
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20230620163959_init/: migration.sql
prisma/migrations/20230621125238_remove_optional_relations/: migration.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/onboarding/: Layout.tsx  index.tsx  intro.tsx
src/components/: icons.tsx  menu-mode-toggle.tsx  menu.tsx  tailwind-indicator.tsx
src/components/ui/: accordion.tsx  alert.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx  textarea.tsx  toast.tsx  use-toast.ts
src/dashboard/: page.tsx
src/dashboard/components/: date-range-picker.tsx  recent-sales.tsx  search.tsx  team-switcher.tsx  user-nav.tsx
src/lib/: bindings.ts  commands.ts  rspc.tsx
src/styles/: globals.css
