[package]
name = "cscore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
platform-dirs = "0.3.0"
prisma-client-rust = { workspace = true }
rspc = "0.1.3"
serde = "1.0.164"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
