[package]
name = "crescent"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"

[build-dependencies.tauri-build]
version = "1.3.0"
features = [ ]

[dependencies]
serde_json = "1.0"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = "1.28.2"
specta = "1.0.4"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
cscore = { path = "../core" }


  [dependencies.tauri]
  version = "1.3.0"
  features = [ "window-minimize", "window-unminimize", "window-unmaximize", "window-show", "window-maximize", "window-start-dragging", "window-hide", "window-close" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false

